<resources>
    <string name="app_name">MobiTest</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="start_test">Start Test</string>
    <string name="create_test">Create Test</string>
    <string name="next">Next</string>
    <string name="login">Login</string>
    <string name="invite_participant">Invite Participant</string>
    <string name="teacher">Teacher</string>
    <string name="student">Student</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title">Title</string>
    <string name="upcoming_tests">Upcoming Test</string>
    <string name="time_left">Time left:   </string>
    <string name="description">Description/Rules</string>
    <string name="finish">Finish</string>
    <string name="add_more">Add more</string>
    <string name="question">Question:</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="option_3">Option 3</string>
    <string name="option_4">Option 4</string>
    <string name="correct_option">Choose correct option</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="invite">Invite</string>
    <string name="later">Later</string>
    <string name="test_created_successfully">Test created successfully. Invite participants now.</string>
    <string name="start_test_confirmation"> Once you start the test, do not leave this screen without finishing the test. If you press back/home button test will be finished automatically. </string>
    <string name="logout_msg">Are you sure you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="test_in_progress">Test in progress. Do you want to quit?</string>
    <string name="finish_test">Are you sure you want to finish the test?</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="loading">Loading..</string>

    <string name="action_settings">Settings</string>

    <string name="title_activity_splash">SplashActivity</string>

    <string name="add_unit_id">ca-app-pub-3305246529016543/9860464119</string>
    <string name="my_account">My Account</string>
    <string name="share">Share</string>
    <string name="logout">Logout</string>
    <string name="about_us">About Us</string>
    <string name="no_test_available">No test available</string>


    <string name="select_role">Please select your role</string>
    <string name="password_does_not_match">Password does not match</string>
    <string name="enter_confirm_password">Please enter confirm password</string>
    <string name="enter_password">Please enter password</string>
    <string name="enter_email">Please enter email</string>
    <string name="no_more_que">No more question</string>
    <string name="select_correct_ans">Please select correct answer</string>
    <string name="your_score">Your score is </string>
    <string name="out_of"> out of </string>
    <string name="about_us_msg">MobiTest app is developed as a part of UDACITY Android Nanodegree program.</string>
    <string name="share_text">Share MobiTest with your friends: https://github.com/abskaushal/Capstone-Stage2 </string>

</resources>
