<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="abhi.com.mobitest.activity.RegisterActivity">

    <android.support.design.widget.TextInputLayout
        android:layout_width="0dip"
        android:layout_height="1dip"
        android:focusable="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dip"
            android:padding="5dip"

            android:visibility="visible" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_4"
            android:editable="false"
            android:hint="@string/username"

            android:padding="@dimen/dimen_4"
            android:visibility="visible" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="false"
            android:layout_margin="@dimen/dimen_4"
            android:hint="@string/email"
            android:padding="@dimen/dimen_4"


            android:visibility="visible" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10">

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_4"
            android:hint="@string/password"
            android:padding="@dimen/dimen_4"


            android:visibility="visible" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10">

        <EditText
            android:id="@+id/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_4"
            android:hint="@string/confirm_password"
            android:padding="@dimen/dimen_4"
            android:visibility="visible" />
    </android.support.design.widget.TextInputLayout>


    <RadioGroup
        android:id="@+id/role_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbtn_teacher"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_margin="10dip"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/teacher" />

        <RadioButton
            android:id="@+id/rbtn_student"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_margin="10dip"
            android:layout_weight="1"
            android:text="@string/student" />
    </RadioGroup>

    <Button
        android:id="@+id/createAccount"
        style="@style/PositiveButtonStyle"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/dimen_20"
        android:text="@string/create_account" />

</LinearLayout>
