<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="abhi.com.mobitest.activity.CreateTestActivity">

    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@drawable/edittext_bg"
        android:hint="@string/title"
        android:padding="@dimen/dimen_4"
        android:visibility="visible" />


    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_100"
        android:layout_marginTop="@dimen/dimen_10"
        android:background="@drawable/edittext_bg"
        android:gravity="top|left|start"
        android:hint="@string/description"
        android:padding="@dimen/dimen_4"
        android:visibility="visible" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10">

        <TextView
            android:id="@+id/question_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/question"
            android:textSize="@dimen/text_size_medium" />

        <TextView
            android:id="@+id/question_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/question_text"
            android:layout_toRightOf="@+id/question_text"
            android:text="1"
            android:textSize="@dimen/text_size_medium" />
    </RelativeLayout>

    <EditText
        android:id="@+id/question"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="@dimen/dimen_10"
        android:gravity="top|left|start"
        android:background="@drawable/edittext_bg"
        android:hint="@string/question"
        android:padding="@dimen/dimen_4"
        android:visibility="visible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10"
        android:orientation="horizontal">


        <EditText
            android:id="@+id/option_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dimen_4"
            android:layout_marginRight="@dimen/dimen_4"
            android:layout_weight="1"
            android:background="@drawable/edittext_bg"
            android:hint="@string/option_1"
            android:padding="@dimen/dimen_4"
            android:visibility="visible" />

        <EditText
            android:id="@+id/option_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_4"
            android:layout_marginStart="@dimen/dimen_4"
            android:layout_weight="1"
            android:background="@drawable/edittext_bg"
            android:hint="@string/option_2"
            android:padding="@dimen/dimen_4"
            android:visibility="visible" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10"
        android:orientation="horizontal">


        <EditText
            android:id="@+id/option_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dimen_4"
            android:layout_marginRight="@dimen/dimen_4"
            android:layout_weight="1"
            android:background="@drawable/edittext_bg"
            android:hint="@string/option_3"
            android:padding="@dimen/dimen_4"
            android:visibility="visible" />

        <EditText
            android:id="@+id/option_4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_4"
            android:layout_marginStart="@dimen/dimen_4"
            android:layout_weight="1"
            android:background="@drawable/edittext_bg"
            android:hint="@string/option_4"
            android:padding="@dimen/dimen_4"
            android:visibility="visible" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10"
        android:text="@string/correct_option"
        android:textSize="@dimen/text_size_medium" />

    <RadioGroup
        android:id="@+id/correct_option_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbtn_1"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_margin="10dip"
            android:layout_weight="1"
            android:gravity="center"
            android:text="1" />

        <RadioButton
            android:id="@+id/rbtn_2"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_margin="10dip"
            android:layout_weight="1"
            android:text="2" />

        <RadioButton
            android:id="@+id/rbtn_3"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_margin="10dip"
            android:layout_weight="1"
            android:gravity="center"
            android:text="3" />

        <RadioButton
            android:id="@+id/rbtn_4"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_margin="10dip"
            android:layout_weight="1"
            android:text="4" />
    </RadioGroup>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/create_test"
            style="@style/PositiveButtonStyle"
            android:layout_width="0dp"
            android:layout_marginTop="@dimen/dimen_20"
            android:layout_weight="1"

            android:text="@string/create_test" />

        <View
            android:layout_width="@dimen/dimen_10"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/add_more"
            style="@style/NegativeButtonStyle"
            android:layout_width="0dp"
            android:layout_marginTop="@dimen/dimen_20"
            android:layout_weight="1"
            android:text="@string/add_more" />
    </LinearLayout>
</LinearLayout>
