<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="abhi.com.mobitest.activity.TestActivity">

    <LinearLayout
        android:id="@+id/rules_linear"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="@dimen/text_size_medium" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10"
            android:textSize="@dimen/text_size_medium" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_20"
            android:text="@string/description"
            android:textSize="@dimen/text_size_medium" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10"
            android:textSize="@dimen/text_size_medium" />

        <Button
            android:id="@+id/start_test"
            style="@style/PositiveButtonStyle"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/dimen_40"
            android:text="@string/start_test" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/question_linear"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_left"
                android:textSize="@dimen/text_size_large" />

            <View
                android:layout_width="@dimen/dimen_10"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textColor="@color/red"
                android:textSize="@dimen/text_size_large" />
        </LinearLayout>

        <TextView
            android:id="@+id/question_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_20"
            android:text="@string/question"
            android:textSize="@dimen/text_size_medium" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:padding="@dimen/dimen_10"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/question"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title"
                    android:textSize="@dimen/text_size_medium" />

                <RadioGroup
                    android:id="@+id/correct_option_radio_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/rbtn_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="1" />

                    <RadioButton
                        android:id="@+id/rbtn_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="2" />

                    <RadioButton
                        android:id="@+id/rbtn_3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="3" />

                    <RadioButton
                        android:id="@+id/rbtn_4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="4" />
                </RadioGroup>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/finish"
                        style="@style/PositiveButtonStyle"
                        android:layout_width="0dp"
                        android:layout_marginTop="@dimen/dimen_20"
                        android:layout_weight="1"

                        android:text="@string/finish" />

                    <View
                        android:layout_width="@dimen/dimen_10"
                        android:layout_height="match_parent" />

                    <Button
                        android:id="@+id/next"
                        style="@style/NegativeButtonStyle"
                        android:layout_width="0dp"
                        android:layout_marginTop="@dimen/dimen_20"
                        android:layout_weight="1"
                        android:text="@string/next" />
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>
</LinearLayout>
